# vanda-haskell

./: .ghci  .gitignore  .kateconfig  .kateproject  BenchmarkComplete.hs  BenchmarkDaShit.hs  BenchmarkNegra.hs  BenchmarkTDBH.hs  BenchmarkTDBHB.hs  CONTRIBUTING.md  Demo.hs  EMTest.hs  LICENSE  Main.hs  README.md  README.txt  RuleExtraction.hs  StateSplit.hs  Vanda.cabal  WTABarHillelComplete.hs  WTABarHillelTopDown.hs  WTABarHillelTopDownBin.hs  benchmark-data-filter.bash  benchmark.bash  benchmarkComplete.bash  plot2.bash  speedtest.bash  stack.yaml  vanda.cabal  vanda.cabal.programs
Algorithms/: CYK.hs  CYKExtended.hs  EMDictionaryArray.hs  EMDictionaryIntMap.hs  EMTrees.hs  ExpectationMaximization.hs  InsideOutsideWeights.hs  InsideOutsideWeightsTree.hs  KAStar.hs  NBest.hs  RuleExtraction.hs  StateSplit.hs  WTABarHillelComplete.hs  WTABarHillelTopDown.hs  WTABarHillelTopDownBinarizing.hs
Algorithms/KAStar/: Data.hs  State.hs  Test.hs
Data/: HyperGraph.hs  Hypergraph.hs  Negra.hs  Queue.hs  WCFG.hs  WSA.hs  WTA.hs  WTAid.hs
Data/Hypergraph/: Acyclic.hs
Parser/: ApplicativeParsec.hs  HGraphLoader.hs  Negra.hs  NegraLazy.hs  Penn.hs  StanfordGrammar.hs
TestData/: TestHypergraph.hs  TestWTA.hs
Tools/: FastNub.hs  Miscellaneous.hs  PrettyPrint.hs  Timestamps.hs
executable/: Main.hs
executable/VandaCLI/: Brackets.hs  CBSM.hs  LCFRS.hs  MATLearner.hs  NGrams.hs  NeGra.hs  PBSM.hs  PCFG.hs  PDTA.hs  PMCFG.hs  PennToSentenceCorpus.hs  XRSNGrams.hs  XRSToHypergraph.hs  XRSTranslate.hs
executable/VandaCLI/CBSM/: CmdArgs.hs
executable/VandaCLI/Corpus/Binarization/: CmdArgs.hs
executable/VandaCLI/Corpus/Negra/: Intervals.hs  Util.hs
executable/VandaCLI/Corpus/SExpression/: CmdArgs.hs
executable/VandaCLI/PDTA/: CmdArgs.hs
lib/: build.sh  kenlm.cc  setup.sh
notes/: BerkeleyToHypergraph.ps  BerkeleyToHypergraph.stat  BerkeleyToHypergraph2.ps
programs/: AdaptToLM.hs  BerkeleyToHypergraph.hs  Binarize.hs  BinarizeLCFRS.hs  GHKM.hs  MultipleDyckLanguages.hs  NGrams.hs  NGrams_KenLM.hs  NegraToLCFRS.hs  NegraToPenn.hs  PennToInt.hs  PennToSentenceCorpus.hs  TestHypergraph.hs  TestIntHypergraph.hs  Train.hs  TrainGHKM.hs  TreeToTikZ.hs  Vanda-Programs.cabal  WriteHypergraph.hs  XRSNGrams.hs  XRSToHypergraph.hs  XRSTranslate.hs  programs.cabal
src/: .gitignore  CodingConventions.hs  Demo.hs  GUIMain.hs  Main.hs  TestStanfordGrammar.hs  Text.hs  Train.hs  TrainGHKM.hs  Translate.hs
src/Algorithms/: CYKExtended.hs  DecoderIBM1.hs  EMDictionary.hs  EMDictionaryArray.hs  EMDictionaryIntMap.hs  EMTrees.hs  InsideOutsideWeights.hs  KAStar.hs  StateSplit.hs  WTABarHillelTopDown.hs
src/Algorithms/KAStar/: Data.hs  State.hs
src/Control/: Error.hs
src/Control/Monad/: Extra.hs
src/Data/: Converging.hs  IntTokenMap.hs  Interner.hs  LimitedQueue.hs  MultiHashMap.hs  MultiMap.hs  NTT.hs  NTTBinary.hs  Negra.hs  Queue.hs  Range.hs  RevMap.hs  WTA.hs  Weight.hs
src/Data/List/: Extra.hs  Shuffle.hs
src/Data/Maybe/: Extra.hs
src/PBSM/: Main.hs  PatternBasedStateMerging.hs  PrettyPrint.hs  Types.hs
src/Parser/: NegraLazy.hs  Penn.hs  StanfordGrammar.hs  TreeTerm.hs
src/System/Directory/: Extra.hs
src/Test/: GHKM.hs  TestEarley.hs  TestHypergraph.hs  Translation.hs  WriteHypergraph.hs
src/Vanda/: Features.hs  Functions.hs  Hypergraph.hs  Main.hs  Token.hs  Util.hs
src/Vanda/Algorithms/: Earley.hs  EarleyCFG.hs  EarleyMonadic.hs  EarleyMonadic0.hs  ExpectationMaximization.hs  ExpectationMaximizationAcyclic.hs  InsideOutsideWeights.hs  InsideOutsideWeightsAcyclic.hs  IntEarley.hs  IntersectWithNGram.hs  IntersectWithNGramUtil.hs
src/Vanda/Algorithms/Earley/: Earley.hs  Earley_String_String.hs  Earley_WSA.hs  FastNub.hs  WSA.hs
src/Vanda/CBSM/: BiMap.hs  CRTG.hs  CmdArgs.hs  CountBasedStateMerging.hs  Dovetailing.hs  Main.hs  Merge.hs  ProductOrder.hs  StatisticsRenderer.hs  statistics-beam.gnuplot  statistics.gnuplot
src/Vanda/CFTG/: CFTG.hs  Examples.hs  Foobar.hs
src/Vanda/Corpus/: Binarization.hs  Negra.hs  SExpression.hs  TreeTerm.hs
src/Vanda/Dyck/: DyckLanguages.hs  Main.hs  MultipleDyckLanguages.hs
src/Vanda/Grammar/: AutomataStorage.hs  LM.hs  NGrams.hs  PMCFG.hs  XFSA.hs
src/Vanda/Hypergraph/: BackwardStar.hs  Basic.hs  Binary.hs  DotExport.hs  EdgeList.hs  ForwardStar.hs  IntBinary.hs  IntHypergraph.hs  NFData.hs  Recognize.hs  Text.hs  Tree.hs
src/Vanda/PBSM/: Main.hs  PatternBasedStateMerging.hs  PrettyPrint.hs  Types.hs
src/Vanda/Util/: CommandlineInfo.hs  Histogram.hs  IO.hs  Memorysavers.hs  PrettyPrint.hs  ShellEscape.hs  Timestamps.hs  Tree.hs
src0/: .kateconfig  BenchmarkCYK.hs  BenchmarkNegra.hs  BenchmarkTDBH.hs  Demo.hs  EMTest.hs  Main.hs  TestStanfordGrammar.hs  benchmarkTDBH.bash  plot.bash
src0/Algorithms/: CYK.hs  CYKExtended.hs  DecoderIBM1.hs  EMDictionary.hs  EMDictionaryArray.hs  EMTrees.hs  ExpectationMaximization.hs  InsideOutsideWeights.hs  KAStar.hs  NBest.hs  RuleExtraction.hs  StateSplit.hs  WTABarHillelComplete.hs  WTABarHillelTopDown.hs  WTABarHillelTopDownBinarizing.hs
src0/Algorithms/KAStar/: Data.hs  State.hs  Test.hs
src0/Data/: Hypergraph.hs  HypergraphDot.hs  WCFG.hs  WSA.hs  WTA.hs
src0/PBSM/: Main.hs  PatternBasedStateMerging.hs  PrettyPrint.hs  Types.hs
src0/Parser/: HGraphLoader.hs  Negra.hs  Penn.hs  StanfordGrammar.hs
src0/TestData/: TestHypergraph.hs  TestWTA.hs
src0/Tools/: FastNub.hs  Miscellaneous.hs  PrettyPrint.hs  Timestamps.hs
tests/: HUnitTests.hs  TestUtil.hs
tests/Data/: MultiMapTests.hs
tests/Data/List/: ExtraTests.hs
tests/Vanda/Algorithms/: EarleyTest.hs
tests/Vanda/CBSM/: CountBasedStateMergingTests.hs  DovetailingTests.hs
tests/Vanda/Corpus/: BinarizationTests.hs
testsuite/: runtests.sh
testsuite/tests/: .kateconfig  HUnitTests.hs  TestUtil.hs
testsuite/tests/Control/: ErrorTests.hs
testsuite/tests/Data/: MultiMapTests.hs  RevMapTests.hs
tools/: .gitignore  Setup.cpp  Setup.hs  documentation.cpp  hierarchical_structure.php  latex_docu.cpp  listings-haskell2010.tex  module_overview.cpp  module_overview.dot  modules.hs
(+102 files in other folders)
