name:           Vanda
version:        0.1
cabal-version:  >= 1.8
license:        AllRightsReserved
license-file:   LICENSE
copyright:      (c) 2012 Vanda Team, Technische Universität Dresden
author:         Vanda Team
maintainer:     Toni.Dietze@tu-dresden.de
stability:      alpha
homepage:       http://www.inf.tu-dresden.de/index.php?node_id=1567
bug-Reports:    mailto:Toni.Dietze@tu-dresden.de
-- package-url:    http://www.cabal_source_package.com
synopsis:       Haskell Machine Translation Toolkit
-- description:    längere Beschreibung
category:       NLP
tested-with:    GHC
Build-Type:     Simple

Flag gtk
  Description: enable tools depending on gtk
  Default:     False

library
  build-depends:
      array
    , base
    , bimap
    , binary >= 0.6.4
    , bytestring
    , cmdargs
    , containers >= 0.5.0
    , deepseq
    , directory
    , filepath
    , hashable
    , heap
    , JuicyPixels
    , log-domain
    , MissingH
    , mtl
    , parallel >= 3.2
    , parsec >= 3.1.2
    , pretty
    , QuickCheck
    , random
    , split
    , text
    , time
    , unix
    , unordered-containers
    , vector
    , zlib
  exposed-modules:
      CodingConventions
    , Control.Error
    , Data.Interner
    , Data.List.Extra
    , Data.List.Shuffle
    , Data.Maybe.Extra
    , Data.MultiMap
    , Data.NTT
    , Data.Queue
    , Data.RevMap
    , Data.WTA
    , System.Console.CmdArgs.Explicit.Misc
    , Vanda.Algorithms.Earley
    , Vanda.Algorithms.Earley.FastNub
    , Vanda.Algorithms.Earley.WSA
    , Vanda.Algorithms.EarleyMonadic
    , Vanda.Algorithms.ExpectationMaximization
    , Vanda.Algorithms.ExpectationMaximizationAcyclic
    , Vanda.Algorithms.InsideOutsideWeights
    , Vanda.Algorithms.InsideOutsideWeightsAcyclic
    , Vanda.Algorithms.IntEarley
    , Vanda.Algorithms.IntersectWithNGram
    , Vanda.Algorithms.IntersectWithNGrams.Main
    , Vanda.Algorithms.IntersectWithNGramUtil
    , Vanda.CBSM.CountBasedStateMerging
    , Vanda.CBSM.Dovetailing
    , Vanda.CBSM.Main
    , Vanda.CBSM.Merge
    , Vanda.CBSM.ProductOrder
    , Vanda.CBSM.StatisticsRenderer
    , Vanda.CFTG.CFTG
    , Vanda.CFTG.Examples
    , Vanda.Corpus.Binarization
    , Vanda.Corpus.Binarization.CmdArgs
    , Vanda.Corpus.Negra
    , Vanda.Corpus.Negra.Binary
    , Vanda.Corpus.Negra.NFData
    , Vanda.Corpus.Negra.Text
    , Vanda.Corpus.Penn.Filter
    , Vanda.Corpus.Penn.Simple
    , Vanda.Corpus.Penn.Text
    , Vanda.Corpus.SExpression
    , Vanda.Corpus.TreeTerm
    , Vanda.Dyck.DyckLanguages
    , Vanda.Dyck.Main
    , Vanda.Dyck.MultipleDyckLanguages
    , Vanda.Features
    , Vanda.Grammar.AutomataStorage
    , Vanda.Grammar.AutomataStorage.TreeStackStorage
    , Vanda.Grammar.AutomataStorage.PushdownStorage
    , Vanda.Grammar.Berkeley.IRTG
    , Vanda.Grammar.Berkeley.Text
    , Vanda.Grammar.LM
    , Vanda.Grammar.NGrams.Functions
    , Vanda.Grammar.NGrams.Main
    , Vanda.Grammar.NGrams.Text
    , Vanda.Grammar.NGrams.VandaNGrams
    , Vanda.Grammar.NGrams.WTA
    , Vanda.Grammar.NGrams.WTA_BHPS
    , Vanda.Grammar.PCFG.PCFG
    , Vanda.Grammar.PCFG.IO
    , Vanda.Grammar.PCFG.Functions
    , Vanda.Grammar.PCFG.Main
    , Vanda.Grammar.XRS.Binarize
    , Vanda.Grammar.XRS.Functions
    , Vanda.Grammar.XRS.GHKM
    , Vanda.Grammar.XRS.IRTG
    , Vanda.Grammar.XRS.LCFRS
    , Vanda.Grammar.XRS.LCFRS.Binarize
    , Vanda.Grammar.XRS.LCFRS.Evaluation
    , Vanda.Grammar.XRS.LCFRS.Extraction
    , Vanda.Grammar.XRS.LCFRS.Main
    , Vanda.Grammar.XRS.Text
    , Vanda.Hypergraph
    , Vanda.Hypergraph.BackwardStar
    , Vanda.Hypergraph.Basic
    , Vanda.Hypergraph.Binary
    , Vanda.Hypergraph.DotExport
    , Vanda.Hypergraph.EdgeList
    , Vanda.Hypergraph.ForwardStar
    , Vanda.Hypergraph.IntHypergraph
    , Vanda.Hypergraph.Text
    , Vanda.Hypergraph.Tree
    , Vanda.PBSM.PatternBasedStateMerging
    , Vanda.PBSM.PrettyPrint
    , Vanda.PBSM.Types
    , Vanda.Token
    , Vanda.Util
    , Vanda.Util.Histogram
    , Vanda.Util.IO
    , Vanda.Util.Memorysavers
    , Vanda.Util.Timestamps
    , Vanda.Util.Tree
  hs-source-dirs:  src
  GHC-Options: -O -funbox-strict-fields -optc-O3 -fexcess-precision -optc-ffast-math -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -O -funbox-strict-fields -optc-O3 -fexcess-precision -optc-ffast-math -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fprof-auto -fprof-cafs -fprof-auto-calls

executable Vanda
  build-depends:
      array
    , base
    , bimap
    , binary >= 0.6.4
    , bytestring
    , cmdargs
    , containers >= 0.5.0
    , deepseq
    , directory
    , filepath
    , hashable
    , heap
    , JuicyPixels
    , log-domain >= 0.10.2
    , MissingH
    , mtl
    , parallel >= 3.2
    , parsec >= 3.1.2
    , pretty
    , QuickCheck
    , random
    , split
    , text
    , time
    , unix
    , unordered-containers
    , vector
    , zlib
  if flag(gtk)
    build-depends: gtk
  hs-source-dirs:  src
  main-is: Main.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -fprof-auto -fprof-cafs -fprof-auto-calls -O2 -funbox-strict-fields

Test-Suite HUnitTests
  build-depends:
      base
    , binary >= 0.6.4
    , containers >= 0.5.0
    , HUnit
    , log-domain
    , random
    , Vanda
    , vector
  GHC-Options: -main-is HUnitTests
  hs-source-dirs: testsuite/tests
  main-is: HUnitTests.hs
  type: exitcode-stdio-1.0
