name:           Vanda
version:        0.1
cabal-version:  >= 1.8
license:        AllRightsReserved
license-file:   LICENSE
copyright:      (c) 2012 Vanda Team, Technische Universität Dresden
author:         Vanda Team
maintainer:     Toni.Dietze@tu-dresden.de
stability:      alpha
homepage:       http://www.inf.tu-dresden.de/index.php?node_id=1567
bug-Reports:    mailto:Toni.Dietze@tu-dresden.de
-- package-url:    http://www.cabal_source_package.com
synopsis:       Haskell Machine Translation Toolkit
-- description:    längere Beschreibung
category:       NLP
tested-with:    GHC
Build-Type:     Simple

Flag gtk
  Description: enable tools depending on gtk
  Default:     False

library
  build-depends:
      array
    , base
    , bimap
    , binary >= 0.6.4
    , bytestring
    , bytestring-lexing
    , cmdargs
    , containers >= 0.5.0
    , deepseq
    , directory
    , filepath
    , groups
    , hashable
    , heap
    , JuicyPixels
    , log-domain
    , MissingH
    , mtl
    , parallel >= 3.2
    , parsec >= 3.1.2
    , pretty
    , QuickCheck
    , random
    , split
    , stm
    , text
    , time
    , transformers
    , unix
    , unordered-containers
    , vector
    , weighted-search
    , zlib
  if flag(gtk)
   build-depends:
      gtk
  exposed-modules:
      CodingConventions
    , Control.Error
    , Control.Monad.Extra
    , Data.Interner
    , Data.List.Extra
    , Data.List.Shuffle
    , Data.Maybe.Extra
    , Data.MultiMap
    , Data.NTT
    , Data.Queue
    , Data.RevMap
    , Data.WTA
    , Main
    , System.Console.CmdArgs.Explicit.Misc
    , System.Directory.Extra
    , Vanda.Algorithms.Earley
    , Vanda.Algorithms.Earley.FastNub
    , Vanda.Algorithms.Earley.WSA
    , Vanda.Algorithms.EarleyMonadic
    , Vanda.Algorithms.ExpectationMaximization
    , Vanda.Algorithms.ExpectationMaximizationAcyclic
    , Vanda.Algorithms.InsideOutsideWeights
    , Vanda.Algorithms.InsideOutsideWeightsAcyclic
    , Vanda.Algorithms.IntEarley
    , Vanda.Algorithms.IntersectWithNGram
    , Vanda.Algorithms.IntersectWithNGramUtil
    , Vanda.Algorithms.MATLearner.TreeAutomaton
    , Vanda.Algorithms.MATLearner.TreesContexts
    , Vanda.CBSM.CountBasedStateMerging
    , Vanda.CBSM.Dovetailing
    , Vanda.CBSM.Merge
    , Vanda.CBSM.ProductOrder
    , Vanda.CBSM.StatisticsRenderer
    , Vanda.CFTG.CFTG
    , Vanda.CFTG.Examples
    , Vanda.Corpus.Binarization
    , Vanda.Corpus.Binarization.CmdArgs
    , Vanda.Corpus.Negra
    , Vanda.Corpus.Negra.Binary
    , Vanda.Corpus.Negra.NFData
    , Vanda.Corpus.Negra.Text
    , Vanda.Corpus.Penn.Filter
    , Vanda.Corpus.Penn.Simple
    , Vanda.Corpus.Penn.Text
    , Vanda.Corpus.SExpression
    , Vanda.Corpus.SExpression.CmdArgs
    , Vanda.Corpus.TreeTerm
    , Vanda.Dyck.DyckLanguages
    , Vanda.Dyck.MultipleDyckLanguages
    , Vanda.Features
    , Vanda.Grammar.AutomataStorage
    , Vanda.Grammar.AutomataStorage.PushdownStorage
    , Vanda.Grammar.AutomataStorage.SparseTreeStackStorage
    , Vanda.Grammar.AutomataStorage.TreeStackStorage
    , Vanda.Grammar.Berkeley.IRTG
    , Vanda.Grammar.Berkeley.Text
    , Vanda.Grammar.LM
    , Vanda.Grammar.NGrams.Functions
    , Vanda.Grammar.NGrams.Text
    , Vanda.Grammar.NGrams.VandaNGrams
    , Vanda.Grammar.NGrams.WTA
    , Vanda.Grammar.NGrams.WTA_BHPS
    , Vanda.Grammar.PCFG.Functions
    , Vanda.Grammar.PCFG.IO
    , Vanda.Grammar.PCFG.PCFG
    , Vanda.Grammar.PMCFG
    , Vanda.Grammar.PMCFG.Functions
    , Vanda.Grammar.PMCFG.Parse
    , Vanda.Grammar.XFSA
    , Vanda.Grammar.XFSA.Closure
    , Vanda.Grammar.XFSA.Internal
    , Vanda.Grammar.XFSA.Language
    , Vanda.Grammar.XFSA.XFSA
    , Vanda.Grammar.XRS.Binarize
    , Vanda.Grammar.XRS.Functions
    , Vanda.Grammar.XRS.GHKM
    , Vanda.Grammar.XRS.IRTG
    , Vanda.Grammar.XRS.LCFRS
    , Vanda.Grammar.XRS.LCFRS.Binarize
    , Vanda.Grammar.XRS.LCFRS.Evaluation
    , Vanda.Grammar.XRS.LCFRS.Extraction
    , Vanda.Grammar.XRS.Text
    , Vanda.GrammaticalInference.PDTA.Inference
    , Vanda.Hypergraph
    , Vanda.Hypergraph.BackwardStar
    , Vanda.Hypergraph.Basic
    , Vanda.Hypergraph.Binary
    , Vanda.Hypergraph.DotExport
    , Vanda.Hypergraph.EdgeList
    , Vanda.Hypergraph.ForwardStar
    , Vanda.Hypergraph.IntHypergraph
    , Vanda.Hypergraph.Recognize
    , Vanda.Hypergraph.Text
    , Vanda.Hypergraph.Tree
    , Vanda.PBSM.PatternBasedStateMerging
    , Vanda.PBSM.PrettyPrint
    , Vanda.PBSM.Types
    , Vanda.Token
    , Vanda.Util
    , Vanda.Util.Histogram
    , Vanda.Util.IO
    , Vanda.Util.Memorysavers
    , Vanda.Util.PrettyPrint
    , Vanda.Util.Timestamps
    , Vanda.Util.Tree
  if flag(gtk)
   exposed-modules:
      Vanda.Algorithms.MATLearner.MATLearner
    , Vanda.Algorithms.MATLearner.Parser
    , Vanda.Algorithms.MATLearner.Strings
    , Vanda.Algorithms.MATLearner.Teacher
  other-modules:
  --, Vanda.Algorithms.Earley.Earley
  --, Vanda.Algorithms.Earley.Earley_String_String
  --, Vanda.Algorithms.Earley.Earley_WSA
  --, Vanda.Algorithms.EarleyCFG
  --, Vanda.Algorithms.EarleyMonadic0
      Vanda.Algorithms.IntersectWithNGrams.Main
    , Vanda.CBSM.CmdArgs
    , Vanda.CBSM.Main
    , Vanda.CFTG.Foobar
    , Vanda.Dyck.Main
  --, Vanda.Functions
  --, Vanda.Grammar.NGrams.KenLM
    , Vanda.Grammar.NGrams.Main
    , Vanda.Grammar.PCFG.Main
    , Vanda.Grammar.PMCFG.Main
    , Vanda.Grammar.XRS.LCFRS.Main
    , Vanda.GrammaticalInference.PDTA.CmdArgs
    , Vanda.GrammaticalInference.PDTA.Main
    , Vanda.PBSM.Main
  if flag(gtk)
   other-modules:
      Vanda.Algorithms.MATLearner.Main
  default-language: Haskell2010
  hs-source-dirs:  src
  GHC-Options:      -Wall -fwarn-incomplete-record-updates
  ghc-prof-options: -Wall -fwarn-incomplete-record-updates

executable Vanda
  build-depends:
      array
    , base
    , bimap
    , binary >= 0.6.4
    , bytestring
    , bytestring-lexing
    , cmdargs
    , containers >= 0.5.0
    , deepseq
    , directory
    , filepath
    , hashable
    , heap
    , JuicyPixels
    , log-domain >= 0.10.2
    , MissingH
    , mtl
    , parallel >= 3.2
    , parsec >= 3.1.2
    , pretty
    , QuickCheck
    , random
    , split
    , stm
    , text
    , time
    , unix
    , unordered-containers
    , vector
    , zlib
  if flag(gtk)
   build-depends:
      gtk
  default-language: Haskell2010
  hs-source-dirs:  src
  main-is: Main.hs
  GHC-Options:      -rtsopts -Wall -fwarn-incomplete-record-updates
  ghc-prof-options: -rtsopts -Wall -fwarn-incomplete-record-updates

Test-Suite HUnitTests
  build-depends:
      base
    , binary >= 0.6.4
    , containers >= 0.5.0
    , HUnit
    , log-domain
    , random
    , Vanda
    , vector
  default-language: Haskell2010
  GHC-Options: -main-is HUnitTests
  hs-source-dirs: testsuite/tests
  main-is: HUnitTests.hs
  type: exitcode-stdio-1.0
