name:           Vanda-Programs
version:        0.1
cabal-version:  >= 1.8
license:        AllRightsReserved
license-file:   LICENSE
copyright:      (c) 2012 Vanda Team, Technische Universität Dresden
author:         Vanda Team
maintainer:     Toni.Dietze@tu-dresden.de
stability:      alpha
homepage:       http://www.inf.tu-dresden.de/index.php?node_id=1567
bug-Reports:    mailto:Toni.Dietze@tu-dresden.de
-- package-url:    http://www.cabal_source_package.com
synopsis:       Haskell Machine Translation Tools
-- description:    längere Beschreibung
category:       NLP
tested-with:    GHC
Build-Type:     Simple


{-
executable Binarize
  build-depends:
      base
    , containers
    , array
    , vector
    , heap
    , bytestring
    , text
    , parsec >= 3.1.2
    , binary
    , deepseq
    , zlib
    , mtl
    , parallel >= 3.2
    , Vanda
  Main-Is:  Binarize.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -fprof-auto -fprof-cafs -fprof-auto-calls -O2 -funbox-strict-fields
  Extensions:
      ScopedTypeVariables
    , TypeSynonymInstances
    , FlexibleInstances
    , MultiParamTypeClasses
    , TypeFamilies
    , FlexibleContexts
    , BangPatterns
-}


executable XRSToHypergraph
  build-depends: Vanda
  Main-Is:  XRSToHypergraph.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -fprof-auto -fprof-cafs -fprof-auto-calls -O2 -funbox-strict-fields


executable XRSTranslate
  build-depends: Vanda
  Main-Is:  XRSTranslate.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -fprof-auto -fprof-cafs -fprof-auto-calls -O2 -funbox-strict-fields


{-
executable Train
  build-depends:
      base
    , containers
    , array
    , vector
    , heap
    , bytestring
    , text
    , parsec >= 3.1.2
    , binary
    , deepseq
    , zlib
    , parallel >= 3.2
    , Vanda
  Main-Is:  Train.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Extensions:
      ScopedTypeVariables
    , TypeSynonymInstances
    , FlexibleInstances
    , MultiParamTypeClasses
    , TypeFamilies
    , FlexibleContexts
    , BangPatterns
-}


{-
executable TrainGHKM
  build-depends:
      base
    , containers
    , array
    , vector
    , heap
    , bytestring
    , text
    , parsec >= 3.1.2
    , binary
    , deepseq
    , zlib
    , parallel >= 3.2
    , Vanda
  Main-Is:  TrainGHKM.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -fprof-auto -fprof-cafs
  Extensions:
      ScopedTypeVariables
    , TypeSynonymInstances
    , FlexibleInstances
    , MultiParamTypeClasses
    , TypeFamilies
    , FlexibleContexts
    , BangPatterns
-}


{-
executable Translate
  build-depends:
      base
    , containers
    , array
    , vector
    , heap
    , bytestring
    , text
    , parsec >= 3.1.2
    , binary
    , deepseq
    , zlib
    , parallel >= 3.2
    , Vanda
  Main-Is:  Translate.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Extensions:
      ScopedTypeVariables
    , TypeSynonymInstances
    , FlexibleInstances
    , MultiParamTypeClasses
    , TypeFamilies
    , FlexibleContexts
    , BangPatterns
-}


{-
executable WriteHypergraph
  build-depends:
      base
    , containers
    , array
    , vector
    , heap
    , bytestring
    , text
    , parsec >= 3.1.2
    , binary
    , deepseq
    , zlib
    , mtl
    , parallel >= 3.2
    , Vanda
  Main-Is:  WriteHypergraph.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Extensions:
      ScopedTypeVariables
    , TypeSynonymInstances
    , FlexibleInstances
    , MultiParamTypeClasses
    , TypeFamilies
    , FlexibleContexts
    , BangPatterns
-}


{-
executable TestHypergraph
  build-depends:
      base
    , containers
    , array
    , vector
    , heap
    , bytestring
    , text
    , parsec >= 3.1.2
    , binary
    , deepseq
    , zlib
    , mtl
    , parallel >= 3.2
    , Vanda
  Main-Is:  TestHypergraph.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -fprof-auto -fprof-cafs -fprof-auto-calls -O2 -funbox-strict-fields
  Extensions:
      ScopedTypeVariables
    , TypeSynonymInstances
    , FlexibleInstances
    , MultiParamTypeClasses
    , TypeFamilies
    , FlexibleContexts
    , BangPatterns
-}


{-
executable TestIntHypergraph
  build-depends:
      base
    , containers
    , array
    , vector
    , heap
    , bytestring
    , text
    , parsec >= 3.1.2
    , binary
    , deepseq
    , zlib
    , mtl
    , parallel >= 3.2
    , Vanda
  Main-Is:  TestIntHypergraph.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -fprof-auto -fprof-cafs -fprof-auto-calls -O2 -funbox-strict-fields
  Extensions:
      ScopedTypeVariables
    , TypeSynonymInstances
    , FlexibleInstances
    , MultiParamTypeClasses
    , TypeFamilies
    , FlexibleContexts
    , BangPatterns
-}


{-
executable GHKM
  build-depends:
      base
    , containers
    , array
    , vector
    , heap
    , bytestring
    , text
    , parsec >= 3.1.2
    , binary
    , deepseq
    , zlib
    , mtl
    , parallel >= 3.2
    , Vanda
  Main-Is:  GHKM.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -fprof-auto -fprof-cafs
  Extensions:
      ScopedTypeVariables
    , TypeSynonymInstances
    , FlexibleInstances
    , MultiParamTypeClasses
    , TypeFamilies
    , FlexibleContexts
    , BangPatterns
    , GeneralizedNewtypeDeriving
-}


{-
executable BerkeleyToHypergraph
  build-depends:
      base
    , containers
    , array
    , vector
    , heap
    , bytestring
    , text
    , parsec >= 3.1.2
    , binary
    , deepseq
    , zlib
    , mtl
    , parallel >= 3.2
    , Vanda
  Main-Is:  BerkeleyToHypergraph.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Extensions:
      ScopedTypeVariables
    , TypeSynonymInstances
    , FlexibleInstances
    , MultiParamTypeClasses
    , TypeFamilies
    , FlexibleContexts
    , BangPatterns
-}


{-
executable NegraToPenn
  build-depends:
      base
    , containers
    , array
    , vector
    , heap
    , bytestring
    , text
    , parsec >= 3.1.2
    , binary
    , deepseq
    , zlib
    , mtl
    , parallel >= 3.2
    , Vanda
  Main-Is:  NegraToPenn.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts
  Extensions:
      ScopedTypeVariables
    , TypeSynonymInstances
    , FlexibleInstances
    , MultiParamTypeClasses
    , TypeFamilies
    , FlexibleContexts
    , BangPatterns
-}


{-
executable PennToInt
  build-depends:
      base
    , containers
    , array
    , vector
    , heap
    , bytestring
    , text
    , parsec >= 3.1.2
    , binary
    , deepseq
    , zlib
    , mtl
    , parallel >= 3.2
    , Vanda
  Main-Is:  PennToInt.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts
  ghc-prof-options: -fprof-auto -fprof-cafs
  Extensions:
      ScopedTypeVariables
    , TypeSynonymInstances
    , FlexibleInstances
    , MultiParamTypeClasses
    , TypeFamilies
    , FlexibleContexts
    , BangPatterns
-}
