name:           Vanda-Programs
version:        0.1
cabal-version:  >= 1.8
license:        AllRightsReserved
license-file:   ../LICENSE
copyright:      (c) 2012 Vanda Team, Technische Universität Dresden
author:         Vanda Team
maintainer:     Toni.Dietze@tu-dresden.de
stability:      alpha
homepage:       http://www.inf.tu-dresden.de/index.php?node_id=1567
bug-Reports:    mailto:Toni.Dietze@tu-dresden.de
-- package-url:    http://www.cabal_source_package.com
synopsis:       Haskell Machine Translation Tools
-- description:    längere Beschreibung
category:       NLP
tested-with:    GHC
Build-Type:     Simple


executable NGrams
  build-depends:
      base
    , text
    , Vanda
  Main-Is: NGrams.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -fprof-auto -fprof-cafs -fprof-auto-calls -O2 -funbox-strict-fields


executable PennToSentenceCorpus
  build-depends:
      base
    , containers
    , text
    , Vanda
  Main-Is: PennToSentenceCorpus.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -fprof-auto -fprof-cafs -fprof-auto-calls -O2 -funbox-strict-fields


executable XRSNGrams
  build-depends:
      base
    , array
    , binary
    , bytestring
    , containers
    , text
    , Vanda
    , vector
    , zlib
  Main-Is: XRSNGrams.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -fprof-auto -fprof-cafs -fprof-auto-calls -O2 -funbox-strict-fields


executable XRSToHypergraph
  build-depends:
      base
    , array
    , binary
    , bytestring
    , containers
    , deepseq
    , directory
    , text
    , Vanda
    , vector
    , zlib
  Main-Is:  XRSToHypergraph.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -fprof-auto -fprof-cafs -fprof-auto-calls -O2 -funbox-strict-fields


executable XRSTranslate
  build-depends:
      base
    , array
    , containers
    , text
    , Vanda
    , vector
  Main-Is:  XRSTranslate.hs
  GHC-Options:  -O2 -funbox-strict-fields -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  ghc-prof-options: -fprof-auto -fprof-cafs -fprof-auto-calls -O2 -funbox-strict-fields
